Implementing partial doc theme to quickstart

--- a/lib/jade/docs/3.x/_layout.jade
+++ b/lib/jade/docs/3.x/_layout.jade
@@ -46,6 +46,7 @@ block content
       //- Constrains width of document area
       section.document-container
         block documents
+        #marker
 
 block postJS
   script.
