--- a/lib/sass/pages/docs/index.sass
+++ b/lib/sass/pages/docs/index.sass
@@ -15,7 +15,8 @@
     +container
 
   .fixed-main, .fixed-toc
-    float: left
+    @media screen and (min-width: $phablet)
+      float: left
 
   .fixed-main
     @media screen and (min-width: $phablet)
@@ -28,7 +29,7 @@
       width: 80%
 
   .fixed-toc
-    padding: $space
+    width: 100%
 
     ul
       +list($style: 'unstyled')
@@ -37,6 +38,7 @@
       +heading-xxs 
 
     @media screen and(min-width: $phablet)
+      padding: $space
       width: 50%
 
     @media screen and (min-width: $tablet)
@@ -73,18 +75,25 @@
         margin-left: 20%
 
 .document
+  margin: ($space * 3) 0
 
   .code
     background: #1d1f21
-    padding: $space
+    padding: $space/4
 
     > p:first-child
       display: none
+
+  @media screen and (min-width: $phablet)
+    margin-top: $space
 
   @media screen and (min-width: $desktop)
     display: flex
     justify-content: flex-start
     align-items: stretch
+    margin:
+      bottom: 0
+      top: 0
 
     .article, .code
       width: 50%
@@ -96,6 +105,21 @@
 
     .article.article-full
       width: 100%
+      position: relative
+
+      padding-right: calc(50% + #{$space})
+
+      &:after
+        content: ' '
+        display: block
+        position: absolute
+        top: 0
+        right: 0
+        left: 50%
+        bottom: -1px
+        // background: lighten(#1d1f21, 10%)
+        background: black
+        border-bottom: 1px solid map-get($black, light)
 
 // Highlight JS
 
