--- a/rails/app/assets/stylesheets/kickstart_rails/pages/docs/index.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/pages/docs/index.sass
@@ -15,7 +15,8 @@
     +container
 
   .fixed-main, .fixed-toc
-    float: left
+    @media screen and (min-width: $phablet)
+      float: left
 
   .fixed-main
     @media screen and (min-width: $phablet)
@@ -28,15 +29,16 @@
       width: 80%
 
   .fixed-toc
-    padding: $space
+    width: 100%
 
     ul
       +list($style: 'unstyled')
 
     h1
-      +heading-xxs 
+      +heading-xs 
 
     @media screen and(min-width: $phablet)
+      padding: $space
       width: 50%
 
     @media screen and (min-width: $tablet)
@@ -73,22 +75,29 @@
         margin-left: 20%
 
 .document
+  margin-bottom: $space * 4
 
   .code
     background: #1d1f21
-    padding: $space
+    padding: $space/4
 
     > p:first-child
       display: none
+
+  @media screen and (min-width: $phablet)
+    .article, .code
+      padding: $space
 
   @media screen and (min-width: $desktop)
     display: flex
     justify-content: flex-start
     align-items: stretch
+    margin:
+      bottom: 0
+      top: 0
 
     .article, .code
       width: 50%
-      padding: $space
       border-bottom: 1px solid map-get($brown, lightest)
 
     .code
@@ -96,10 +105,48 @@
 
     .article.article-full
       width: 100%
+      position: relative
+
+      padding-right: calc(50% + #{$space})
+
+      &:after
+        content: ' '
+        display: block
+        position: absolute
+        top: 0
+        right: 0
+        left: 50%
+        bottom: -1px
+        // background: lighten(#1d1f21, 10%)
+        background: black
+        border-bottom: 1px solid map-get($black, light)
+
+.page_heading
+  +page_heading
+
+  h1
+    +heading-xl
+
+    @media screen and (min-width: $phablet)
+      padding-left: $space
+      margin-bottom: 0
+
+  @media screen and (min-width: $phablet)
+    margin-top: $space
+
+  @media screen and (min-width: $desktop)
+    margin-bottom: 0
 
 // Highlight JS
 
 code, pre, kbd, samp
   &.hljs
     font-size: 0.9rem
+
+// Main page overrides
+.main-navigation
+  svg
+    fill: map-get($black, lighter)
+
+  +navbar($collapse: true, $background-color: white)
 
