Correcting kickstart SVG

--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_canary.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_canary.sass
@@ -134,9 +134,10 @@ h6
 
 =type
   +type-default
+  color: map-get($gray, darker)
 
 html
-  +type-default
+  +type
 
 =list($style: 'none')
   +list-default($style)
