--- a/lib/jade/_layout.jade
+++ b/lib/jade/_layout.jade
@@ -43,3 +43,5 @@ html(lang='en')
         k$.nav('.main-navigation')
 
       block postJS
+      script(src="//use.typekit.net/iqk4yxz.js")
+      script try{Typekit.load();}catch(e){}
