--- a/lib/sass/components/_navbar.sass
+++ b/lib/sass/components/_navbar.sass
@@ -73,6 +73,7 @@
           display: block
 
     h1
+      +heading-xxs
       margin-bottom: 0
       font-size: $base-font-size
       line-height: $default-line-height
