--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -36,6 +36,7 @@ $secondary-color:     map-get($white, darker)
 $space:               25px
 $heading-font-family: 'Lato', helvetica neue, sans-serif
 $body-font-family:    'Lato', helvetica neue, sans-serif
+$mono-font-family:    'ubuntu-mono', monospace
 $base-font-size:      16px
 $default-font-color:  map-get($gray, darkest)
 $default-line-height: 1.4rem
