--- a/rails/app/assets/stylesheets/kickstart_rails/core/_typography.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_typography.sass
@@ -33,7 +33,7 @@ a
   color: darken(map-get($colors, blue), 25%)
   border-radius: $space/5
   padding: ($space/5)
-  font-family: monospace
+  font-family: $mono-font-family
   word-break: break-all
   word-wrap: break-word
   border: 0px !important
