--- a/lib/sass/pages/docs/index.sass
+++ b/lib/sass/pages/docs/index.sass
@@ -60,7 +60,7 @@ h3, h4, h5, h6
           margin-bottom: $space/3
 
     h1
-      +heading-xxs 
+      +heading-xs 
 
     @media screen and(min-width: $phablet)
       padding: $space
