--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_canary.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_canary.sass
@@ -163,6 +163,7 @@ html
 
 =button($background-color: map-get($white, dark), $size: 1)
   +button-default($background-color, $size)
+    border-color: transparent
 
 =button-group($color: map-get($white, dark), $size: 1)
   +button-group-default($color, $size)
