--- a/lib/jade/docs/3.x/ui/alerts/index.jade
+++ b/lib/jade/docs/3.x/ui/alerts/index.jade
@@ -1,51 +1,62 @@
-extends ../../layout
+extends ../../_layout
 
 block hero-title
   h1 Alerts
 
-block basic
-  :markdown
-    Alerts are simple colored containers with opinionated type hierarchy.
-    These are great for drawing attention within content or showing the 
-    user notices above the page. Alerts styles are reused for showing [growls](/#{docsVersion}/ui/notifications).
+block variables
+  - var showFooter = false
+  - var title = "Alerts" 
 
-  .example
-    .alert
-      h1.toc-exempt Attention
-      p You need to change your password
-      button.button Change Password
+block ui-stylesheet
+  link(rel="stylesheet" href="/css/pages/docs/ui/alerts.css")
 
-  :markdown
-    <span>
+block documents
+  .document
+    article.article
+      :markdown
+        Alerts are simple colored containers with opinionated type hierarchy.
+        These are great for drawing attention within content or showing the 
+        user notices above the page. Alerts styles are reused for showing [growls](/#{docsVersion}/ui/notifications).
 
-        <div class="alert">
-          <h1>Attention</h1>
-          <p>You need to change your password</p>
-          <button class="button">Change Password</button>
-        </div>
+      .example
+        .alert
+          h1.toc-exempt Attention
+          p You need to change your password
+          button.button Change Password
 
-  .if-semantic
-    :markdown
-      <span>
+      .row
+        .col-third
+          .alert.alert-warning
+            p Careful!
+        .col-third
+          .alert.alert-error
+            h1.toc-exempt Last command did not work
+            p Please try again.
+        .col-third
+          .alert
+            p Please accept the terms and conditions agreement
+            label.checkbox
+              input(type="checkbox")
+              | I agree to the terms and conditions
 
-          .alert {
-            @include alert();
-          }
-          .button {
-            @include button();
-          }
+    article.code
+      :markdown
+        <span>
 
-  .row
-    .col-third
-      .alert.alert-warning
-        p Careful!
-    .col-third
-      .alert.alert-error
-        h1.toc-exempt Last command did not work
-        p Please try again.
-    .col-third
-      .alert
-        p Please accept the terms and conditions agreement
-        label.checkbox
-          input(type="checkbox")
-          | I agree to the terms and conditions
+            <div class="alert">
+              <h1>Attention</h1>
+              <p>You need to change your password</p>
+              <button class="button">Change Password</button>
+            </div>
+
+      .if-semantic
+        :markdown
+          <span>
+
+              .alert {
+                @include alert();
+              }
+              .button {
+                @include button();
+              }
+
