--- a/lib/sass/themes/_canary.sass
+++ b/lib/sass/themes/_canary.sass
@@ -35,7 +35,7 @@ $colors: (red: #9b0000, orange: #f7a828, yellow: #fdd726, green: #a2c939, blue: 
 $primary-color:       map-get($colors, yellow)
 $secondary-color:     map-get($white, darker)
 $space:               25px
-$heading-font-family: 'jaf-bernino-sans-condensed', 'Lato', helvetica neue, sans-serif
+$heading-font-family: 'museo-sans', 'Lato', helvetica neue, sans-serif
 $body-font-family:    'museo-sans', 'Lato', helvetica neue, sans-serif
 $mono-font-family:    'ubuntu-mono', monospace
 $base-font-size:      16px
