--- a/rails/app/assets/stylesheets/kickstart_rails/pages/docs/ui/buttons.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/pages/docs/ui/buttons.sass
@@ -1,3 +1,12 @@
-@import ../../../themes/_canary
+@import ../../../themes/_default
 
+.button
+  &.button-green
+    +button-color(map-get($colors, green))
+  &.button-red
+    +button-color(map-get($colors, red))
+  &.button-blue
+    +button-color(map-get($colors, blue))
 
+ul.button-group
+  +button-group
