--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -4,7 +4,7 @@
 // Page-level styling goes elsewhere.
 
 // Choose your theme
-@import themes/_canary
+@import themes/_default
 
 // Basic layout
 // ------------
