--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -46,7 +46,7 @@
 // ------
 
 footer.main
-  background: map-get($brown, light)
+  background: map-get($gray, light)
   padding: $space 0
   color: white
 
