--- a/rails/app/assets/stylesheets/kickstart_rails/pages/docs/index.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/pages/docs/index.sass
@@ -2,7 +2,7 @@
 // ==================
 // Generic styles that should be shared across the documentation
 
-@import themes/_canary
+@import themes/_default
 
 h1
   +heading-rg
@@ -123,7 +123,7 @@ h3, h4, h5, h6
 
     .article, .code
       width: 50%
-      border-bottom: 1px solid map-get($brown, lightest)
+      border-bottom: 1px solid map-get($white, darker)
 
     .code
       border-color: darken(map-get($colors, blue), 35%)
