--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -34,8 +34,8 @@ $colors: (red: #CA3518, orange: darkorange, yellow: #ffe312, green: #58AA00, blu
 $primary-color:       map-get($colors, blue)
 $secondary-color:     map-get($white, darker)
 $space:               25px
-$heading-font-family: 'Lato', helvetica neue, sans-serif
-$body-font-family:    'Lato', helvetica neue, sans-serif
+$heading-font-family: 'museo-sans', 'Lato', helvetica neue, sans-serif
+$body-font-family:    'museo-sans', 'Lato', helvetica neue, sans-serif
 $mono-font-family:    'ubuntu-mono', monospace
 $base-font-size:      16px
 $default-font-color:  map-get($gray, darkest)
