--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -4,7 +4,7 @@
 // Page-level styling goes elsewhere.
 
 // Choose your theme
-@import themes/_canary
+@import themes/_default
 
 // Basic layout
 // ------------
@@ -46,7 +46,7 @@
 // ------
 
 footer.main
-  background: map-get($brown, light)
+  background: map-get($gray, light)
   padding: $space 0
   color: white
 
