Fixing up forms page

--- a/lib/sass/pages/docs/index.sass
+++ b/lib/sass/pages/docs/index.sass
@@ -103,7 +103,7 @@ h3, h4, h5, h6
     background: #1d1f21
     padding: $space/4
 
-    > p:first-child
+    p:first-child
       display: none
 
   @media screen and (min-width: $phablet)
