--- a/lib/jade/docs/3.x/ui/forms/index.jade
+++ b/lib/jade/docs/3.x/ui/forms/index.jade
@@ -504,237 +504,270 @@ block documents
                 @include form_group('horizontal');
               }
 
+  .document
+    article.article
+      :markdown
+        # States
 
-block variations
+        Disabled inputs are grayed out and receive a disabled cursor.
 
+      input(type="email" disabled value="john@example.com")
 
-  :markdown
-    ### States
+    article.code
+      :markdown
+        <span>
 
-    Disabled inputs are grayed out and receive a disabled cursor.
+            <input type="email" value="john@example.com" disabled />
 
-  input(type="email" disabled value="john@example.com")
+  .document
+    article.article
+      :markdown
+        # Validation
 
-  :markdown
-    <span>
+        Three classes can be used to style form components for
+        validation: `error(s)`, `success(es)`, and `warning(s)`.
 
-        <input type="email" value="john@example.com" disabled />
+        ## Singular
 
-  :markdown
-    ### Validation
+        The classes can be directly applied to the elements:
 
-    Three classes can be used to style form components for
-    validation: `error(s)`, `success(es)`, and `warning(s)`.
+      form.form
+        .form_group
+          input.error(type="email" value="john.mail.com")
+          p.error Please enter a valid email
 
-    #### Singular
+    article.code
+      :markdown
+        <span>
 
-  form.form
-    .form_group
-      input.error(type="email" value="john.mail.com")
-      p.error Please enter a valid email
+            <input class="error" type="email" />
+            <p class="error">Please enter a valid email</p>
 
-  :markdown
-    The classes can be directly applied to the elements:
+  .document
+    article.article
+      :markdown
+        ## Plural
 
-        <input class="error" type="email" />
-        <p class="error">Please enter a valid email</p>
+        Or to a **direct** parent via the plural class.
 
-    #### Plural
+        When using the plural class, this can be wrapped below the form
+        group element to select exactly the parts that need to be colored.
 
-  form.form
-    .form_group
-      .errors
-        input(type="email" value="john.mail.com")
-        p Please enter a valid email
+      form.form
+        .form_group
+          .errors
+            input(type="email" value="john.mail.com")
+            p Please enter a valid email
 
-  :markdown
-    Or to a **direct** parent via the plural class.
+      form.form
+        .form_group
+          .errors
+            input(type="email" value="john.mail.com")
+            p Please enter a valid email
 
-        <div class="errors">
-          <input type="email" />
-          <p>Please enter a valid email</p>
-        </div>
+    article.code
+      :markdown
+        <span>
 
-    When using the plural class, this can be wrapped below the form
-    group element to select exactly the parts that need to be colored.
-
-  form.form
-    .form_group
-      .successes
-        input(type="text" value="foo")
-        p Username is available!
-
-  :markdown
-    <span>
-
-        <div class="form_group">
-          <div class="sucesses">
-            <input type="text" id="name" />
-            <p>Username is available!</p>
-          </div>
-        </div>
-
-  h4 Error
-
-  form.form
-    .form_group
-      label.error First Name
-      input.error(type="text" placeholder="John")
-      p.error Please enter a valid first name
-
-  .ifnot-semantic
-    :markdown
-      <span>
-
-          <form class="form" action="...">
-            <label class="error" for="fName">
-            <input class="error" type="text" placeholder="John" id="fName"/>
-            <p class="error">Please enter a valid first name</p>
-          </form>
-
-  .if-semantic
-    :markdown
-      <span>
-
-          <form action="...">
-            <label class="error" for="fName">
-            <input class="error" type="text" placeholder="John" id="fName"/>
-            <p class="error">Please enter a valid first name</p>
-          </form>
-
-          form {
-            @include form();
-          }
-
-  h4 Success
-
-  form.form
-    .form_group
-      label.success First Name
-      input.success(type="text" placeholder="John")
-      p.success Thanks!
-
-  .ifnot-semantic
-    :markdown
-      <span>
-
-          <form class="form" action="...">
+            ...
             <div class="form_group">
-              <label class="success" for="fName">
-              <input class="success" type="text" placeholder="John" name="fName"/>
-              <p class="warning">Thanks!</p>
-            </div>
-          </form>
+              <div class="errors">
+                <input type="email" />
+                <p>Please enter a valid email</p>
+              </div>
+            </div> 
 
-  .if-semantic
-    :markdown
-      <span>
-
-          <form class="form" action="...">
             <div class="form_group">
-              <label class="success" for="fName">
-              <input class="success" type="text" placeholder="John" name="fName"/>
-              <p class="warning">Thanks!</p>
+              <div class="sucesses">
+                <input type="text" id="name" />
+                <p>Username is available!</p>
+              </div>
             </div>
-          </form>
+            ...
+        
 
-  h4 Warning
+  .document
+    article.article
+      h1 Success
 
-  form.form
-    .form_group
-      label.warning First Name
-      input.warning(type="text" placeholder="John")
-      p.warning This information will be public
+      form.form
+        .form_group
+          label.success First Name
+          input.success(type="text" placeholder="John")
+          p.success Thanks!
 
-  .ifnot-semantic
-    :markdown
-      <span>
+    article.code
+      .ifnot-semantic
+        :markdown
+          <span>
 
-          <form class="form" action="...">
-            <div class="form_group">
-              <label class="warning" for="fName">
-              <input class="warning" type="text" placeholder="John" name="fName"/>
-              <p class="warning">This information will be public</p>
-            </div>
-          </form>
+              <div class="form_group">
+                <label class="success" for="fName">
+                <input class="success" type="text" placeholder="John" name="fName"/>
+                <p class="warning">Thanks!</p>
+              </div>
 
-  .if-semantic
-    :markdown
-      For this particular use case, there is no semantic version of the
-      validation coloring classes.
+      .if-semantic
+        :markdown
+          <span>
 
-          <form action="...">
-            <div class="form_group">
-              <label class="warning" for="fName">
-              <input class="warning" type="text" placeholder="John" name="fName"/>
-              <p class="warning">This information will be public</p>
-            </div>
-          </form>
+              <div class="form_group">
+                <label class="success" for="fName">
+                <input class="success" type="text" placeholder="John" name="fName"/>
+                <p class="warning">Thanks!</p>
+              </div>
 
-          form {
-            @include form();
-          }
-          .form_group {
-            @include form_group();
-          }
+              form {
+                @include form();
+              }
+              .form_group {
+                @include form_group();
+              }
 
-  h4 Mixed
+  .document
+    article.article
+      h1 Error
 
-  form.form
-    .form_group
-      .errors
-        label First Name
-        input(type="text" placeholder="John")
-        p Please enter a valid first name.
+      form.form
+        .form_group
+          label.error First Name
+          input.error(type="text" placeholder="John")
+          p.error Please enter a valid first name
 
-    .form_group
-      .warnings
-        label Last Name
-        input(type="text" placeholder="Smith")
-        p We already have a user by this name. Are you sure about this?
 
-    .form_group
-      .successes
-        label Last Name
-        input(type="text" placeholder="Smith")
-        p We already have a user by this name. Are you sure about this?
+    article.code
+      .ifnot-semantic
+        :markdown
+          <span>
 
-    .form_group
-      label.success Issue size
-      label
-        input(type="radio" name="issue")
-        | Small issue
-      label.success
-        input.success(type="radio" name="issue")
-        | Regular issue
-      p.success Great choice!
-      label
-        input(type="radio" name="issue")
-        | Large issue
+              <div class="form_group">
+                <label class="error" for="fName">
+                <input class="error" type="text" placeholder="John" id="fName"/>
+                <p class="error">Please enter a valid first name</p>
+              </div>
 
-    .form_group
-      label.error Shipping options
-      label
-        input(type="checkbox")
-        |  Fast shipping
-      label.error
-        input(type="checkbox")
-        |  Gift-wrapping
-      p.error Sorry, this is not available at this time.
+      .if-semantic
+        :markdown
+          <span>
 
-    .form_group
-      label.warning Subscription frequency
-      select.warning
-        option Daily
-        option Weekly
-        option Monthly
-        option Yearly
-      p.warning Please be advised, it takes 1 week to change this subscription option
+              <div class="form_group">
+                <label class="error" for="fName">
+                <input class="error" type="text" placeholder="John" id="fName"/>
+                <p class="error">Please enter a valid first name</p>
+              </div>
 
-    .form_group
-      .successes
-        label Bio
-        textarea
-        p Great bio!
+              form {
+                @include form();
+              }
+              .form_group {
+                @include form_group();
+              }
 
-    input(value="Subscribe" type="submit" role="button")
+  .document
+    article.article
+      h1 Warning
+
+      form.form
+        .form_group
+          label.warning First Name
+          input.warning(type="text" placeholder="John")
+          p.warning This information will be public
+
+    article.code
+      .ifnot-semantic
+        :markdown
+          <span>
+
+              <div class="form_group">
+                <label class="warning" for="fName">
+                <input class="warning" type="text" placeholder="John" name="fName"/>
+                <p class="warning">This information will be public</p>
+              </div>
+
+      .if-semantic
+        :markdown
+          <span>
+
+              <div class="form_group">
+                <label class="warning" for="fName">
+                <input class="warning" type="text" placeholder="John" name="fName"/>
+                <p class="warning">This information will be public</p>
+              </div>
+
+              form {
+                @include form();
+              }
+              .form_group {
+                @include form_group();
+              }
+
+  .document
+    article.article
+      h1 Mixed
+
+      p Just an example of using multiple error classes, both plural and singluar.
+
+      form.form
+        .form_group
+          .errors
+            label First Name
+            input(type="text" placeholder="John")
+            p Please enter a valid first name.
+
+        .form_group
+          .warnings
+            label Last Name
+            input(type="text" placeholder="Smith")
+            p We already have a user by this name. Are you sure about this?
+
+        .form_group
+          .successes
+            label Last Name
+            input(type="text" placeholder="Smith")
+            p We already have a user by this name. Are you sure about this?
+
+        .form_group
+          label.success Issue size
+          label
+            input(type="radio" name="issue")
+            | Small issue
+          label.success
+            input.success(type="radio" name="issue")
+            | Regular issue
+          p.success Great choice!
+          label
+            input(type="radio" name="issue")
+            | Large issue
+
+        .form_group
+          label.error Shipping options
+          label
+            input(type="checkbox")
+            |  Fast shipping
+          label.error
+            input(type="checkbox")
+            |  Gift-wrapping
+          p.error Sorry, this is not available at this time.
+
+        .form_group
+          label.warning Subscription frequency
+          select.warning
+            option Daily
+            option Weekly
+            option Monthly
+            option Yearly
+          p.warning Please be advised, it takes 1 week to change this subscription option
+
+        .form_group
+          .successes
+            label Bio
+            textarea
+            p Great bio!
+
+        input(value="Subscribe" type="submit" role="button")
+
+    article.code
+      :markdown
+        <span>
+
+            // See individual snippets above.
